[gd_scene load_steps=20 format=3 uid="uid://djvbpqk8imreb"]

[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_5xq2t"]
[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_6ems2"]
[ext_resource type="PackedScene" uid="uid://cf02413m8n7je" path="res://scenes/enemy/enemy.tscn" id="2_m2pin"]
[ext_resource type="Script" path="res://scenes/ui/hand.gd" id="2_psya5"]
[ext_resource type="PackedScene" uid="uid://dq5ameahauanj" path="res://scenes/card_target_selector/card_target_selector.tscn" id="3_oeg7k"]
[ext_resource type="PackedScene" uid="uid://b6iew3csolhmg" path="res://scenes/player/player.tscn" id="3_qxwad"]
[ext_resource type="AudioStream" uid="uid://dpdenqqbovwfq" path="res://art/8_bit_iced_village_lofi.mp3" id="3_ucpho"]
[ext_resource type="Resource" uid="uid://ba7axiilutkod" path="res://characters/warrior/warrior.tres" id="4_co2eo"]
[ext_resource type="Script" path="res://scenes/enemy/enemy_handler.gd" id="4_m30tp"]
[ext_resource type="Resource" uid="uid://btgxx4rpdmckx" path="res://enemies/crab/crab_enemy.tres" id="5_c1f6f"]
[ext_resource type="Script" path="res://scenes/ui/battle_ui.gd" id="7_8ytpf"]
[ext_resource type="Resource" uid="uid://c08b6p3150hsu" path="res://enemies/bat/bat_enemy.tres" id="8_awxr5"]
[ext_resource type="Script" path="res://scenes/player/player_handler.gd" id="8_b35sn"]
[ext_resource type="PackedScene" uid="uid://dbucgmipw1afu" path="res://scenes/ui/mana_ui.tscn" id="11_khs37"]
[ext_resource type="PackedScene" uid="uid://c6fggluy58vwi" path="res://scenes/ui/tooltip.tscn" id="12_or60h"]
[ext_resource type="Theme" uid="uid://mj270v1otvm2" path="res://main_theme.tres" id="13_vhowu"]
[ext_resource type="Script" path="res://scenes/ui/red_flash.gd" id="15_dytyo"]
[ext_resource type="PackedScene" uid="uid://dt38kxlyxqf3q" path="res://scenes/ui/battle_over_panel.tscn" id="17_47sxe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fu3pf"]
size = Vector2(256, 100)

[node name="Battle" type="Node2D"]
script = ExtResource("1_6ems2")
char_stats = ExtResource("4_co2eo")
music = ExtResource("3_ucpho")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.309804, 0.309804, 0.309804, 1)
texture = ExtResource("1_5xq2t")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(128, 50)
shape = SubResource("RectangleShape2D_fu3pf")
debug_color = Color(0, 0.6, 0.701961, 0.0901961)

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("4_m30tp")

[node name="BatEnemy2" parent="EnemyHandler" instance=ExtResource("2_m2pin")]
position = Vector2(173, 60)
stats = ExtResource("8_awxr5")

[node name="CrabEnemy" parent="EnemyHandler" instance=ExtResource("2_m2pin")]
position = Vector2(205, 74)
stats = ExtResource("5_c1f6f")

[node name="BatEnemy" parent="EnemyHandler" instance=ExtResource("2_m2pin")]
position = Vector2(239, 55)
stats = ExtResource("8_awxr5")

[node name="Player" parent="." instance=ExtResource("3_qxwad")]
position = Vector2(41, 75)
stats = ExtResource("4_co2eo")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_oeg7k")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_b35sn")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_8ytpf")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_psya5")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_khs37")]

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_or60h")]
offset_top = 6.0
offset_bottom = 42.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -20.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_vhowu")
text = "End Turn"

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_dytyo")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.443137, 0.443137, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_47sxe")]
visible = false

[connection signal="child_order_changed" from="EnemyHandler" to="." method="_on_enemy_handler_child_order_changed"]
